<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cti_fpga</name>
  <version>0.0.0</version>
  <description>cti_fpga meta package</description>
  <maintainer email="neousys@todo.todo">neousys</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>cti_fpga_data</depend>
  <depend>cti_fpga_serial</depend>
  <depend>cti_fpga_serial_msgs</depend>
  <depend>mcu_ota</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
